<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Selfiebot</string>
    <string name="app_name_launcher" translatable="false">Selfiebot</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="down">Down</string>
    <string name="enable_bluetooth_connection">Use Bluetooth</string>
    <string name="holderMacAddr">holder mac address </string>
    <string name="holder_is_connected">Holder is connected</string>
    <string name="holder_is_not_connected">Holder is not connected</string>
    <string name="ipHint">Head IP address</string>
    <string name="left">Left</string>
    <string name="makeServer">Connect to Holder</string>
    <string name="pausing">Pausing...</string>
    <string name="right">Right</string>
    <string name="server_closed">Server closed</string>
    <string name="successful_connect">Successful connection</string>
    <string name="title_activity_about">Help</string>
    <string name="title_activity_device_choosing">Choose mac-address</string>
    <string name="title_other_devices">Other devices</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="сonnectproxy">Connection via proxy (port 4445)</string>
    <string name="Up">Up</string>
    <string name="about">Help</string>
    <string name="action_settings">Settings</string>
    <string name="about_text">It\'s app for controling movable holder.\n To control:\n
        1. Hold your device in credle and switch on the Holder \n
        2. Push <i>Connect to Holder</i>.\n
        3. Now your partner can start GIL head and push <i>Connect to robot</i> to control the Holder
    </string>
    <string name="back">Back</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_not_enabled">Bluetooth was not enabled</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported</string>
    <string name="bluetooth_source_is_unreachable">Bluetooth source is unreachable</string>
    <string name="button_scan">Scanning for devices</string>
    <string name="chooseDevice">Choose device</string>
    <string name="choosed">mac: </string>
    <string name="connect">p2p connection (port 1553)</string>
    <string name="connect2Robot">Connect to robot</string>
    <string name="connection_closed">Connection closed</string>
    <string name="connection_cutted">Connection lost</string>
    <string name="connectionp2p">Successful p2p connection </string>
    <string name="connectionp2pnot">Could\'t connect to server</string>
    <string name="connectionproxy">Successful connection to proxy server</string>
    <string name="connectionproxynot">Could\'t connect to proxy server</string>
    <string name="exit">Stop services and exit</string>
    <string name="bt_thread_closed">Bluetooth thread closed</string>
    <string name="successful_connection">Successful connection</string>
    <string name="unsuccessful_connection">Unsuccessful connection</string>
    <string name="bluetooth_source_is_unreachable_not_connected">Device is not connected</string>
    <string name="cant_write_to_operator">Can\'t write to operator</string>
    <string name="email_support" translatable="false">
        <a href="mailto:ilya.petrov.m@gmail.com?subject=SelfieBot%20feedback">ilya.petrov.m@gmail.com</a>
    </string>
    <string name="company_name" translatable="false">Endurance Robots</string>
    <string name="company_site" translatable="false">
        <a href="http://endurancerobots.com">EnduranceRobots.com</a></string>
    <string name="authors">Vladislav Sannikov (design)\n
        George Ter-Avakov (hardware)\nIlya Petrov (app)</string>
    <string name="guide">Guide</string>
    <string name="company">Company</string>
    <string name="support">Support</string>
    <string name="site">Site</string>
    <string name="authors_title">Authors</string>
    <string name="change_camera">Change camera</string>
    <string name="no_face_detect">Device don\'t support face detection</string>
    <string name="updateApp">Update application</string>
    <string name="downloadLastRelease">
        <a href="https://github.com/deadtr/SelfieBot/wiki/Install">Download last release</a>
    </string>
    <string name="connection_closed_by_client">Connection closed by client</string>
    <string name="connection_closed_by_error">Error occures. Connection closed</string>
    <string name="wait_for_another_connection">Waiting for another connection</string>
    <string name="follow_me" translatable="false">Follow Me</string>
    <string name="connect_to_internet">Please connect to internet</string>
    <string name="you_control_selfiebot">You control SelfieBot</string>
    <string name="server_is_shared">Server is shared</string>
    <string name="unable_close_server">Unable to close SelfieBot server</string>
    <string name="unable_close_ui">Unable to close Ui control service</string>
</resources>